--- a/userraw/partyserverlan.cfg
+++ b/userraw/partyserverlan.cfg
@@ -56,6 +56,7 @@ set logfile "2"                                 // Enable loging 1-2? enable. 0 
 set g_logSync "1"                               // 1 always flush games_mp.log, 0 only flush on game end
 set g_log "logs/lobbyLAN_games_mp.log"          // Gamelog filename. If you edit this..make sure you change B3.xml if you have bigbrotherbot. IW4MAdmin auto-detects however.
 set g_allowVote "0"                             // Enable voting on this server
+set sv_votesRequired "0"                        // Votes required for a vote to pass. Settings this to 0 will calculate the required votes based on the number of players (players / 2 + 1)
 set sv_allowClientConsole "1"                   // Enable or Disable players ability to access server commands
 set sv_maxclients "18"                          // Max players in your server.
 set party_maxplayers "18"                       // ^^Same as above for some weird reason^^^
