add gun game dvars

--- a/userraw/serverlan.cfg
+++ b/userraw/serverlan.cfg
@@ -2,7 +2,7 @@
 ///  	IW4x Server Configuration file           //
 ///////////////////////////////////////////////////
 
-/////////////////////////////////////////////////// 
+///////////////////////////////////////////////////
 // SERVER NAME & COLORS	TIPS                     //
 ///////////////////////////////////////////////////
 //                                               //
@@ -37,7 +37,7 @@ set _Location "Earth"                           // Location
 //////////////////////////////////////////////////
 // Web Server Downloading (Optional)            //
 //////////////////////////////////////////////////
-//set sv_wwwDownload "1"                        // Allow downloading maps and mods from different server instead of the game server. 
+//set sv_wwwDownload "1"                        // Allow downloading maps and mods from different server instead of the game server.
 //set sv_wwwBaseUrl "http://127.0.0.1/IW4x/"    // http-Redirect to usermaps & mods folder on a web server. https does NOT work!
 
 //////////////////////////////////////////////////
@@ -93,6 +93,7 @@ set sv_disableChat "0"                          // Disable chat messages from cl
 // ctf - Capture the Flag                       //
 // oneflag - One-Flag CTF                       //
 // gtnw - Global Thermo-Nuclear War             //
+// gun - Gun Game                               //
 //                                              //
 //////////////////////////////////////////////////
 
@@ -178,7 +179,7 @@ set scr_xpscale "2"                           // IW's way of Double XP.
 // higher weights increase selection chance     //
 //////////////////////////////////////////////////
 
-// set scr_airdrop_ac130 "3"			
+// set scr_airdrop_ac130 "3"
 // set scr_airdrop_ammo "17"
 // set scr_airdrop_counter_uav "15"
 // set scr_airdrop_emp "1"
@@ -231,7 +232,7 @@ set scr_dm_playerrespawndelay "0"               // How long player will wait unt
 set scr_dm_numlives "0"                         // Number of lives per player 0 for unlimited.
 set scr_dm_roundlimit "1"                       // Rounds per game.
 set scr_dm_winlimit "1"                         // amount of wins needed to win a round-based game
-set scr_dm_promode "0" 
+set scr_dm_promode "0"
 
 //////////////////////////////////////////////////
 // TEAM DEATHMATCH GAMETYPE SETTINGS            //
@@ -241,10 +242,10 @@ set scr_war_scorelimit "15000"                   // Score limit to win the game.
 set scr_war_timelimit "10"                      // Duration in minutes for the game to end if the score limit isn't reached.
 set scr_war_playerrespawndelay "0"              // How long player will wait until respawn.
 set scr_war_waverespawndelay "0"                // Duration is seconds before the first respawn in each round.
-set scr_war_numlives "0"                        // Number of lives per player 0 for unlimited.			
+set scr_war_numlives "0"                        // Number of lives per player 0 for unlimited.
 set scr_war_roundlimit "1"                      // Rounds per game.
 set scr_war_winlimit "1"                        // amount of wins needed to win a round-based game
-set scr_war_promode "0" 
+set scr_war_promode "0"
 
 //////////////////////////////////////////////////
 // DOMINATION GAMETYPE SETTINGS                 //
@@ -379,6 +380,17 @@ set scr_gtnw_roundswitch "0"                    // Rounds before the teams switc
 set scr_gtnw_winlimit "1"                       // rounds per game
 set scr_gtnw_waverespawndelay "0"               // First respawn delay for each round.
 set scr_gtnw_promode "0"
+
+//////////////////////////////////////////////////
+// GUN GAME GAMETYPE SETTINGS                   //
+//////////////////////////////////////////////////
+
+// set scr_gun_scorelimit "1"                    // Value is set to gun count by the game
+set scr_gun_timelimit "10"                       // Duration in minutes the game will continue if the score isn't reached.
+set scr_gun_numlives "0"                         // Number of lives per game 0 for unlimited.
+set scr_gun_roundlimit "1"                       // Rounds to be played.
+set scr_gun_winlimit "1"                         // Amount of wins needed to win a round-based game
+set scr_gun_halftime "0"                         // Half-Time
 
 
 //////////////////////////////////////////////////
