--- a/userraw/server.cfg
+++ b/userraw/server.cfg
@@ -70,7 +70,7 @@ set sv_floodProtect "1"                         // Chat Spam Protection
 set sv_kickBanTime "3600"                       // Kick Ban Duration. Time before player can re-join the server after getting kicked.
 set sv_randomBotNames "1"                       // Randomize the names.
 set sv_replaceBots "1"                          // Test clients will be replaced by connecting players when the server is full.
-set set party_enable "0"                        // Lobby Mode Server. Read the wiki more about this. If you want sv_maprotation & control your gametype settings. Leave this at 0.
+set party_enable "0"                        // Lobby Mode Server. Read the wiki more about this. If you want sv_maprotation & control your gametype settings. Leave this at 0.
 set sv_voice "1"                                // Allow Voice Chat (0 = Disable. 1 = Enabled (Teams only).)
 set sv_voicequality "9"                         // Voice Chat Quality. (0-9) Default is 3 (= Steam/Console quality). Use 9 for the best quality.
 set sv_allowAimAssist "1"                       // Enable Controller Aim-Assist.
