--- a/userraw/server.cfg
+++ b/userraw/server.cfg
@@ -1,28 +1,28 @@
-///////////////////////////////////////////////////
-///     IW4x Server Configuration file           //
-///////////////////////////////////////////////////
+//////////////////////////////////////////////////
+///     IW4x Server Configuration file          //
+//////////////////////////////////////////////////
 
-/////////////////////////////////////////////////// 
-// SERVER NAME & COLORS	TIPS                     //
-///////////////////////////////////////////////////
-//                                               //
-// ^1 Red                                        //
-// ^2 Green                                      //
-// ^3 yellow                                     //
-// ^4 Blue                                       //
-// ^5 Cyan                                       //
-// ^6 Pink                                       //
-// ^7 White                                      //
-// ^8 Depends on the team colors playing.        //
-// ^9 grey                                       //
-// ^0 Black                                      //
-// ^: Rainbow colors                             //
-//                                               //
-///////////////////////////////////////////////////
+//////////////////////////////////////////////////
+// SERVER NAME & COLORS	TIPS                    //
+//////////////////////////////////////////////////
+//                                              //
+// ^1 Red                                       //
+// ^2 Green                                     //
+// ^3 yellow                                    //
+// ^4 Blue                                      //
+// ^5 Cyan                                      //
+// ^6 Pink                                      //
+// ^7 White                                     //
+// ^8 Depends on the team colors playing.       //
+// ^9 grey                                      //
+// ^0 Black                                     //
+// ^: Rainbow colors                            //
+//                                              //
+//////////////////////////////////////////////////
 
 
-set sv_hostname "^2IW4x^7 Default Server"        // Sets the server hostname
-set sv_motd ""                                   // Sets a custom motd which is shown on the intel message loadscreen when a player joins. leave blank for defualt intel messages.
+set sv_hostname "^2IW4x^7 Default Server"       // Sets the server hostname
+set sv_motd ""                                  // Sets a custom motd which is shown on the intel message loadscreen when a player joins. leave blank for defualt intel messages.
 
 
 //////////////////////////////////////////////////
@@ -37,7 +37,7 @@ set _Location "Earth"                           // Location
 //////////////////////////////////////////////////
 // Web Server Downloading (Optional)            //
 //////////////////////////////////////////////////
-//set sv_wwwDownload "1"                        // Allow downloading maps and mods from different server instead of the game server. 
+//set sv_wwwDownload "1"                        // Allow downloading maps and mods from different server instead of the game server.
 //set sv_wwwBaseUrl "http://"                   // http-Redirect to usermaps & mods folder on a web server. https does NOT work!
 
 //////////////////////////////////////////////////
@@ -70,7 +70,7 @@ set sv_floodProtect "1"                         // Chat Spam Protection
 set sv_kickBanTime "3600"                       // Kick Ban Duration. Time before player can re-join the server after getting kicked.
 set sv_randomBotNames "1"                       // Randomize the names.
 set sv_replaceBots "1"                          // Test clients will be replaced by connecting players when the server is full.
-set set party_enable "0"                        // Lobby Mode Server. Read the wiki more about this. If you want sv_maprotation & control your gametype settings. Leave this at 0.
+set party_enable "0"                            // Lobby Mode Server. Read the wiki more about this. If you want sv_maprotation & control your gametype settings. Leave this at 0.
 set sv_voice "1"                                // Allow Voice Chat (0 = Disable. 1 = Enabled (Teams only).)
 set sv_voicequality "9"                         // Voice Chat Quality. (0-9) Default is 3 (= Steam/Console quality). Use 9 for the best quality.
 set sv_allowAimAssist "1"                       // Enable Controller Aim-Assist.
@@ -93,6 +93,7 @@ set sv_disableChat "0"                          // Disable chat messages from cl
 // ctf - Capture the Flag                       //
 // oneflag - One-Flag CTF                       //
 // gtnw - Global Thermo-Nuclear War             //
+// gun - Gun Game                               //
 //                                              //
 //////////////////////////////////////////////////
 
@@ -231,20 +232,20 @@ set scr_dm_playerrespawndelay "-1"              // How long player will wait unt
 set scr_dm_numlives "0"                         // Number of lives per player. 0 for unlimited.
 set scr_dm_roundlimit "1"                       // Rounds per game.
 set scr_dm_winlimit "1"                         // amount of wins needed to win a round-based game
-set scr_dm_promode "0" 
+set scr_dm_promode "0"
 
 //////////////////////////////////////////////////
 // TEAM DEATHMATCH GAMETYPE SETTINGS            //
 //////////////////////////////////////////////////
 
-set scr_war_scorelimit "7500"                  // Score limit to win the game.
+set scr_war_scorelimit "7500"                   // Score limit to win the game.
 set scr_war_timelimit "10"                      // Duration in minutes for the game to end if the score limit isn't reached.
 set scr_war_playerrespawndelay "-1"             // How long player will wait until respawn.
 set scr_war_waverespawndelay "0"                // Duration is seconds before the first respawn in each round.
-set scr_war_numlives "0"                        // Number of lives per player 0 for unlimited.			
+set scr_war_numlives "0"                        // Number of lives per player 0 for unlimited.
 set scr_war_roundlimit "1"                      // Rounds per game.
 set scr_war_winlimit "1"                        // amount of wins needed to win a round-based game
-set scr_war_promode "0" 
+set scr_war_promode "0"
 
 //////////////////////////////////////////////////
 // DOMINATION GAMETYPE SETTINGS                 //
@@ -379,6 +380,17 @@ set scr_gtnw_roundswitch "0"                    // Rounds before the teams switc
 set scr_gtnw_winlimit "1"                       // rounds per game
 set scr_gtnw_waverespawndelay "0"               // First respawn delay for each round.
 set scr_gtnw_promode "0"
+
+//////////////////////////////////////////////////
+// GUN GAME GAMETYPE SETTINGS                   //
+//////////////////////////////////////////////////
+
+// set scr_gun_scorelimit "1"                    // Value is set to gun count by the game
+set scr_gun_timelimit "10"                       // Duration in minutes the game will continue if the score isn't reached.
+set scr_gun_numlives "0"                         // Number of lives per game 0 for unlimited.
+set scr_gun_roundlimit "1"                       // Rounds to be played.
+set scr_gun_winlimit "1"                         // Amount of wins needed to win a round-based game
+set scr_gun_halftime "0"                         // Half-Time
 
 
 //////////////////////////////////////////////////
