update to iw4x-launcher

--- a/userraw/partyserver.cfg
+++ b/userraw/partyserver.cfg
@@ -54,7 +54,7 @@ set g_inactivity "380"                          // Enable auto kick feature for 
 set g_inactivitySpectator "500"                 // Time in seconds before a spectator gets kicked
 set logfile "2"                                 // Enable loging 1-2? enable. 0 disable. Leave it on if you plan on using B3 or IW4MAdmin.
 set g_logSync "1"                               // 1 always flush games_mp.log, 0 only flush on game end
-set g_log "logs/lobby_games_mp.log"             // Gamelog filename. If you edit this..make sure you change B3.xml if you have bigbrotherbot. IW4MAdmin auto-detects however.
+set g_log "logs/lobby_games_mp.log"             // Gamelog filename.
 set g_allowVote "0"                             // Enable voting on this server
 set sv_votesRequired "0"                        // Votes required for a vote to pass. Settings this to 0 will calculate the required votes based on the number of players (players / 2 + 1)
 set sv_allowClientConsole "1"                   // Enable or Disable players ability to access server commands
