--- a/userraw/partyserverlan.cfg
+++ b/userraw/partyserverlan.cfg
@@ -54,7 +54,7 @@ set g_inactivity "0"                            // Enable auto kick feature for 
 set g_inactivitySpectator "0"                   // Time in seconds before a spectator gets kicked
 set logfile "2"                                 // Enable loging 1-2? enable. 0 disable. Leave it on if you plan on using B3 or IW4MAdmin.
 set g_logSync "1"                               // 1 always flush games_mp.log, 0 only flush on game end
-set g_log "logs/lobbyLAN_games_mp.log"          // Gamelog filename. If you edit this..make sure you change B3.xml if you have bigbrotherbot. IW4MAdmin auto-detects however.
+set g_log "logs/lobbyLAN_games_mp.log"          // Gamelog filename.
 set g_allowVote "0"                             // Enable voting on this server
 set sv_votesRequired "0"                        // Votes required for a vote to pass. Settings this to 0 will calculate the required votes based on the number of players (players / 2 + 1)
 set sv_allowClientConsole "1"                   // Enable or Disable players ability to access server commands
@@ -124,7 +124,7 @@ set bg_lean "1"                                 // Enable CoD4 leaning.
 // Don't know what you doing? Don't touch it! 	//
 //////////////////////////////////////////////////
 
-set scr_xpscale "2"                             // IW's way of Double XP.
+// set scr_xpscale "2"                             // IW's way of Double XP.
 
 //set scr_war_score_kill "0"                    // Amount of XP by each kill.
 //set scr_war_score_headshot "0"                // Amount of XP by each headshot.
