--- a/userraw/serverlan.cfg
+++ b/userraw/serverlan.cfg
@@ -54,7 +54,7 @@ set g_inactivity "0"                            // Enable auto kick feature for 
 set g_inactivitySpectator "0"                   // Time in seconds before a spectator gets kicked
 set logfile "2"                                 // Enable loging 1-2? enable. 0 disable. Leave it on if you plan on using B3 or IW4MAdmin.
 set g_logSync "1"                               // 1 always flush games_mp.log, 0 only flush on game end
-set g_log "logs/localgame_mp.log"               // Gamelog filename. If you edit this..make sure you change B3.xml if you have bigbrotherbot. IW4MAdmin auto-detects however.
+set g_log "logs/localgame_mp.log"               // Gamelog filename.
 set g_allowVote "0"                             // Enable voting on this server
 set sv_votesRequired "0"                        // Votes required for a vote to pass. Settings this to 0 will calculate the required votes based on the number of players (players / 2 + 1)
 set sv_allowClientConsole "1"                   // Enable or Disable players ability to access server commands
@@ -70,7 +70,7 @@ set sv_floodProtect "0"                         // Chat Spam Protection
 set sv_kickBanTime "3600"                       // Kick Ban Duration. Time before player can re-join the server after getting kicked.
 set sv_randomBotNames "1"                       // Randomize the names.
 set sv_replaceBots "1"                          // Test clients will be replaced by connecting players when the server is full.
-set party_enable "0"                        // Lobby Mode Server. Read the wiki more about this. If you want sv_maprotation & control your gametype settings. Leave this at 0.
+set party_enable "0"                            // Lobby Mode Server. Read the wiki more about this. If you want sv_maprotation & control your gametype settings. Leave this at 0.
 set sv_voice "1"                                // Allow Voice Chat (0 = Disable. 1 = Enabled (Teams only).)
 set sv_voicequality "9"                         // Voice Chat Quality. (0-9) Default is 3 (= Steam/Console quality). Use 9 for the best quality.
 set sv_allowAimAssist "1"                       // Enable Controller Aim-Assist.
@@ -141,7 +141,7 @@ set bg_lean "1"                                 // Enable CoD4 leaning.
 // Don't know what you doing? Don't touch it! 	//
 //////////////////////////////////////////////////
 
-set scr_xpscale "2"                           // IW's way of Double XP.
+// set scr_xpscale "2"                          // IW's way of Double XP.
 
 //set scr_war_score_kill "0"                    // Amount of XP by each kill.
 //set scr_war_score_headshot "0"                // Amount of XP by each headshot.
