add bg_vanilla_onemanarmy & bg_vanilla_painkiller

--- a/userraw/server.cfg
+++ b/userraw/server.cfg
@@ -128,6 +128,8 @@ set bg_playerEjection "1"                       // Push intersecting players awa
 set bg_surfacePenetration "0"                   // Values greater than 0 override the surface penetration depth (ability to hit players through obstacles).
 set bg_bulletRange "8192"                       // Maximum Range used when calculating the bullet end position.
 set bg_lean "1"                                 // Enable CoD4 leaning.
+set bg_vanilla_onemanarmy "0"                   // Enable vanilla one man army (restock grenade launcher)
+set bg_vanilla_painkiller "0"                   // Enable vanilla painkiller deathstreak
 
 //////////////////////////////////////////////////
 // XP BOOST CONFIGURATION                       //
