--- a/userraw/serverlan.cfg
+++ b/userraw/serverlan.cfg
@@ -71,12 +71,14 @@ set sv_kickBanTime "3600"                       // Kick Ban Duration. Time befor
 set sv_randomBotNames "1"                       // Randomize the names.
 set sv_replaceBots "1"                          // Test clients will be replaced by connecting players when the server is full.
 set party_enable "0"                            // Lobby Mode Server. Read the wiki more about this. If you want sv_maprotation & control your gametype settings. Leave this at 0.
-set sv_voice "1"                                // Allow Voice Chat (0 = Disable. 1 = Enabled (Teams only).)
+set sv_voice "1"                                // Allow Voice Chat (0 = Disable. 1 = Enabled)
 set sv_voicequality "9"                         // Voice Chat Quality. (0-9) Default is 3 (= Steam/Console quality). Use 9 for the best quality.
+set sv_alltalk "0"                              // Allow voice chat across teams. (0 = Disable, 1 = Enabled)
 set sv_allowAimAssist "1"                       // Enable Controller Aim-Assist.
 set sv_allowColoredNames "1"                    // Allow Colors in Player Names.
 set sv_randomMapRotation "0"                    // Randomize map rotation (takes maps and gamemodes from sv_maprotation and randomizes them).
 set sv_disableChat "0"                          // Disable chat messages from clients.
+
 
 //////////////////////////////////////////////////
 // BASE GAME CONFIGURATION                      //
@@ -128,7 +130,7 @@ set bg_playerEjection "1"                          // Push intersecting players 
 set bg_surfacePenetration "0"                      // Values greater than 0 override the surface penetration depth (ability to hit players through obstacles).
 set bg_bulletRange "8192"                          // Maximum Range used when calculating the bullet end position.
 set bg_lean "1"                                    // Enable CoD4 leaning.
-set bg_refill_grenade_launcher_with_onemanarmy "1" // Enable vanilla one man army (restock grenade launcher)
+set bg_refill_grenade_launcher_with_onemanarmy "0" // Enable vanilla one man army (restock grenade launcher)
 set bg_replace_painkiller_with_adrenaline "1"      // Replace painkiller with adrenaline
 
 //////////////////////////////////////////////////
