--- a/userraw/server.cfg
+++ b/userraw/server.cfg
@@ -71,8 +71,9 @@ set sv_kickBanTime "3600"                       // Kick Ban Duration. Time befor
 set sv_randomBotNames "1"                       // Randomize the names.
 set sv_replaceBots "1"                          // Test clients will be replaced by connecting players when the server is full.
 set party_enable "0"                            // Lobby Mode Server. Read the wiki more about this. If you want sv_maprotation & control your gametype settings. Leave this at 0.
-set sv_voice "1"                                // Allow Voice Chat (0 = Disable. 1 = Enabled (Teams only).)
+set sv_voice "1"                                // Allow Voice Chat (0 = Disable. 1 = Enabled)
 set sv_voicequality "9"                         // Voice Chat Quality. (0-9) Default is 3 (= Steam/Console quality). Use 9 for the best quality.
+set sv_alltalk "0"                              // Allow voice chat across teams. (0 = Disable, 1 = Enabled)
 set sv_allowAimAssist "1"                       // Enable Controller Aim-Assist.
 set sv_allowColoredNames "1"                    // Allow Colors in Player Names.
 set sv_randomMapRotation "0"                    // Randomize map rotation (takes maps and gamemodes from sv_maprotation and randomizes them).
@@ -97,37 +98,39 @@ set sv_disableChat "0"                          // Disable chat messages from cl
 //                                              //
 //////////////////////////////////////////////////
 
-set g_gametype "war"                            // Default gametype in case map rotation doesn't have any gametypes. Choose a gametype from the list above.
-set scr_player_forcerespawn "1"                 // Players respawn automatically after being fragged
-set scr_thirdperson "0"                         // third-person mode
-set scr_game_hardpoints "1"                     // Enable/Disable Killstreak rewards
-set scr_hardpoint_allowhelicopter "1"           // Allow Attack Helicopters
-set scr_hardpoint_allowuav "1"                  // Allow UAV
-set scr_hardpoint_allowartillery "1"            // Allow Airstrikes
-set scr_game_perks "1"                          // Allow players to have perks
-set scr_game_allowkillcam "1"                   // Allow Killcam.
-set scr_nukeTimer "10"                          // Timer when nuke goes off
-set scr_diehard "0"                             // die-hard mode. Teammates will have to revive each other.
-set scr_teambalance "1"                         // Enable or Disable auto balance.
-set scr_game_spectatetype "2"                   // Allow Spectators. 0 Disabled, 1 Team/Player only, 2 Free
-set scr_player_suicidespawndelay "0"            // Wait before you respawn if you committed suicide.
-set scr_player_sprinttime "4"                   // Sprint time, duration a player can run.
-set scr_game_killstreakdelay "8"                // Delay your killstreaks
-set scr_game_objectiveStreaks "1"               // Enable Chopper, AC130 and Nuke
-set scr_classic "0"                             // Enable old-school COD4 killstreaks. UAV, Air Strike, Heli Only.
-set bg_elevators "1"                            // Elevator Glitch Settings (default: 1 (normal). 0 = off, 2 = easy).
-set bg_rocketJump "0"                           // Enable CoD4 Rocket Jumps.
-set bg_rocketJumpScale "64"                     // The scale applied to the pushback force of a rocket.
-set bg_climbAnything "0"                        // Treat any surface as a ladder.
-set bg_bounces "0"                              // Enable Bounces (default: 0 (disabled). 1 = enabled, 2 = double).
-set bg_bouncesAllAngles "0"                     // Enable Bounces from all angles (default: 0 (disabled). 1 = simple, 2 = all surfaces).
-set bg_disableLandingSlowdown "0"               // Toggle landing slowdown.
-set bg_bunnyHopAuto "0"                         // Constantly jump when holding space.
-set bg_playerCollision "1"                      // Push intersecting players away from each other.
-set bg_playerEjection "1"                       // Push intersecting players away from each other.
-set bg_surfacePenetration "0"                   // Values greater than 0 override the surface penetration depth (ability to hit players through obstacles).
-set bg_bulletRange "8192"                       // Maximum Range used when calculating the bullet end position.
-set bg_lean "1"                                 // Enable CoD4 leaning.
+set g_gametype "war"                               // Default gametype in case map rotation doesn't have any gametypes. Choose a gametype from the list above.
+set scr_player_forcerespawn "1"                    // Players respawn automatically after being fragged
+set scr_thirdperson "0"                            // third-person mode
+set scr_game_hardpoints "1"                        // Enable/Disable Killstreak rewards
+set scr_hardpoint_allowhelicopter "1"              // Allow Attack Helicopters
+set scr_hardpoint_allowuav "1"                     // Allow UAV
+set scr_hardpoint_allowartillery "1"               // Allow Airstrikes
+set scr_game_perks "1"                             // Allow players to have perks
+set scr_game_allowkillcam "1"                      // Allow Killcam.
+set scr_nukeTimer "10"                             // Timer when nuke goes off
+set scr_diehard "0"                                // die-hard mode. Teammates will have to revive each other.
+set scr_teambalance "1"                            // Enable or Disable auto balance.
+set scr_game_spectatetype "2"                      // Allow Spectators. 0 Disabled, 1 Team/Player only, 2 Free
+set scr_player_suicidespawndelay "0"               // Wait before you respawn if you committed suicide.
+set scr_player_sprinttime "4"                      // Sprint time, duration a player can run.
+set scr_game_killstreakdelay "8"                   // Delay your killstreaks
+set scr_game_objectiveStreaks "1"                  // Enable Chopper, AC130 and Nuke
+set scr_classic "0"                                // Enable old-school COD4 killstreaks. UAV, Air Strike, Heli Only.
+set bg_elevators "1"                               // Elevator Glitch Settings (default: 1 (normal). 0 = off, 2 = easy).
+set bg_rocketJump "0"                              // Enable CoD4 Rocket Jumps.
+set bg_rocketJumpScale "64"                        // The scale applied to the pushback force of a rocket.
+set bg_climbAnything "0"                           // Treat any surface as a ladder.
+set bg_bounces "0"                                 // Enable Bounces (default: 0 (disabled). 1 = enabled, 2 = double).
+set bg_bouncesAllAngles "0"                        // Enable Bounces from all angles (default: 0 (disabled). 1 = simple, 2 = all surfaces).
+set bg_disableLandingSlowdown "0"                  // Toggle landing slowdown.
+set bg_bunnyHopAuto "0"                            // Constantly jump when holding space.
+set bg_playerCollision "1"                         // Push intersecting players away from each other.
+set bg_playerEjection "1"                          // Push intersecting players away from each other.
+set bg_surfacePenetration "0"                      // Values greater than 0 override the surface penetration depth (ability to hit players through obstacles).
+set bg_bulletRange "8192"                          // Maximum Range used when calculating the bullet end position.
+set bg_lean "1"                                    // Enable CoD4 leaning.
+set bg_refill_grenade_launcher_with_onemanarmy "0" // Enable vanilla one man army (restock grenade launcher)
+set bg_replace_painkiller_with_adrenaline "1"      // Replace painkiller with adrenaline
 
 //////////////////////////////////////////////////
 // XP BOOST CONFIGURATION                       //
